# bevellm

./: .gitignore  AGENTS.md  Cargo.toml  TODO.md
crates/bevellm_macros/: Cargo.toml
crates/bevellm_macros/src/: lib.rs
examples/: conversation.rs  demo.rs  strategy.rs
src/: conversation.rs  lib.rs  llm.rs  main.rs
