[package]
name = "bevellm"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_app = "0.15"
bevy_ecs = "0.15"
bevy_transform = "0.15"
candle-core = { version = "0.8.4", features = ["metal"] }
candle-nn = { version = "0.8.4", features = ["metal"] }
candle-transformers = { version = "0.8.4", features = ["metal"] }
crossbeam-channel = "0.5"
bevellm_macros = { path = "crates/bevellm_macros" }
env_logger = "0.11"
log = "0.4"
rig-core = "0.38.2"
schemars = "1.2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokenizers = "0.22.2"
ureq = "2.12.1"
thiserror = "2"
