[package]
name = "bevellm"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_app = "0.15"
bevy_ecs = "0.15"
bevy_transform = "0.15"
crossbeam-channel = "0.5"
bevellm_macros = { path = "crates/bevellm_macros" }
env_logger = "0.11"
log = "0.4"
schemars = "1.2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mistralrs = { version = "0.8.1", features = ["metal"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread"] }
thiserror = "2"
